--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.2",
     "less": "^4.1.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.17.18",
     "vite": "^2.8.0",
