--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
@@ -13,14 +14,19 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-plugin-vue": "^8.4.1",
     "less": "^4.1.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.5.4",
+    "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
     "vite": "^2.8.0",
+    "vue-eslint-parser": "^8.2.0",
     "vue-tsc": "^0.29.8"
   }
 }
