--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "^2.2.0",
     "ant-design-vue": "^2.2.8",
-    "vue": "^3.2.25"
+    "vite": "^2.8.0",
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.4.1",
     "less": "^4.1.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
-    "vite": "^2.8.0",
     "vue-eslint-parser": "^8.2.0",
     "vue-tsc": "^0.29.8"
   }
