--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^6.0.1",
     "@vitejs/plugin-vue": "^2.2.0",
     "ant-design-vue": "^2.2.8",
+    "pinia": "^2.0.11",
     "vite": "^2.8.0",
     "vue": "^3.2.25",
     "vue-router": "4"
