--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
+    "test": "jest",
+    "pre-commit": "npm lint --fix"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
@@ -18,20 +20,25 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.4.1",
+    "jest": "^27.5.1",
     "less": "^4.1.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
     "vue-eslint-parser": "^8.2.0",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "vue3-jest": "27.0.0-alpha.2"
   }
 }
