--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
     "test": "jest",
-    "pre-commit": "npm lint --fix"
+    "pre-commit": "npm lint --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
@@ -30,8 +31,10 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.4.1",
+    "husky": ">=6",
     "jest": "^27.5.1",
     "less": "^4.1.2",
+    "lint-staged": ">=10",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
@@ -40,5 +43,8 @@
     "vue-eslint-parser": "^8.2.0",
     "vue-tsc": "^0.29.8",
     "vue3-jest": "27.0.0-alpha.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": "eslint --cache --fix"
   }
 }
