--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.3",
+    "babel-jest": "^27.3.1",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -38,6 +42,7 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
     "vue-eslint-parser": "^8.2.0",
